<resources>
    <string name="app_name">Plybl</string>

    <string name="personalise_title">Personalise</string>

    <string name="personalise_width">Width</string>
    <string name="personalise_height">Height</string>
    <string name="personalise_no_rows">No. Rows</string>
    <string name="personalise_no_columns">No. Columns</string>
    <string name="personalise_wood_quality">Wood quality:</string>
    <string name="personalise_colour">Paint colour:</string>
    <string name="personalise_joint">Joint Type:</string>

    <string name="checkout_popup_keep_shopping">Keep Shopping</string>
    <string name="checkout_popup_checkout">Checkout</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_design_choice">DesignChoiceActivity</string>
    <string name="title_activity_personalise">PersonaliseActivity</string>
    <string name="title_activity_log_in">Sign in</string>

    <string name="order_conf_order_no">Order Number:\n# %1$d</string>
    <string name="order_conf_made_by">Being made by:</string>
    <string name="order_conf_eta">ETA: %1$d days</string>
    <string name="order_conf_not_in_title">Not going to be in?</string>
    <string name="order_conf_not_in_prompt">Touch here for more options…</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_address1">House Number / Name</string>
    <string name="prompt_address2">Street</string>
    <string name="prompt_address3">City</string>
    <string name="prompt_address4">County</string>
    <string name="prompt_address5">Post Code</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_guest">Proceed as guest</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>
