<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.thonners.plybl.OrderConfirmation">

    <TextView
        android:id="@+id/tv_order_no"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/order_conf_order_no"
        style="@style/cardDefaultText"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tv_made_by_prompt"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/tv_made_by_prompt"
        android:text="@string/order_conf_made_by"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/cardDefaultText"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/tv_order_no"
        app:layout_constraintRight_toRightOf="@+id/tv_order_no"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/made_by_card"
        android:layout_marginStart="8dp" />

    <android.support.v7.widget.CardView
        android:layout_width="0dp"
        android:layout_height="196dp"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:layout_constraintTop_toBottomOf="@+id/tv_made_by_prompt"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/made_by_card"
        app:cardCornerRadius="@dimen/cardview_default_radius"
        app:cardElevation="@dimen/cardview_default_elevation"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintBottom_toTopOf="@+id/eta_prompt"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.CardView
                android:id="@+id/image_card"
                android:layout_width="156dp"
                android:layout_height="156dp"
                android:layout_marginLeft="12dp"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                app:cardElevation="@dimen/cardview_default_elevation"
                app:cardBackgroundColor="#22222222"
                app:cardCornerRadius="78dp"
                >
                <ImageView
                    android:layout_width="156dp"
                    android:layout_height="156dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/joiner_1"/>
            </android.support.v7.widget.CardView>

            <LinearLayout
                android:id="@+id/tv_layouts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/image_card"
                android:orientation="vertical">
            <TextView
                android:id="@+id/name"
                android:text="Dave"
                style="@style/cardDefaultText"
                android:textColor="@color/white"
                android:padding="18dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/location"
                android:text="Bromley"
                style="@style/cardDefaultText"
                android:textColor="@color/white"
                android:padding="18dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/distance"
                android:text="7 miles away"
                style="@style/cardDefaultText"
                android:textColor="@color/white"
                android:padding="18dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            </LinearLayout>
        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/eta_prompt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/cardDefaultText"
        android:textAlignment="center"
        android:text="@string/order_conf_eta"
        app:layout_constraintTop_toBottomOf="@+id/made_by_card"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/not_in_card"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <android.support.v7.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/not_in_card"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:cardCornerRadius="@dimen/cardview_default_radius"
        app:cardElevation="@dimen/cardview_default_elevation"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">
            <TextView
                android:id="@+id/not_in_title"
                style="@style/cardDefaultText"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:text="@string/order_conf_not_in_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                style="@style/promptDefaultText"
                android:textColor="@color/white"
                android:text="@string/order_conf_not_in_prompt"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>
