<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.thonners.plybl.PersonaliseActivityFragment1"
    tools:showIn="@layout/activity_personalise">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="156dp"
        android:scaleType="centerCrop"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bookcase_1"
        app:layout_constraintHorizontal_bias="1.0" />

    <TextView
        android:id="@+id/prompt_width"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/personalise_width"
        app:layout_constraintLeft_toLeftOf="@+id/slider_width"
        app:layout_constraintTop_toTopOf="@+id/et_width" />

    <EditText
        android:id="@+id/et_width"
        android:layout_width="56dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        android:layout_marginEnd="8dp" />

    <SeekBar
        android:id="@+id/slider_width"
        style="@style/Widget.AppCompat.SeekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:max="2440"
        android:progress="1500"
        app:layout_constraintBottom_toBottomOf="@+id/et_width"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/et_width"
        app:layout_constraintTop_toTopOf="@+id/et_width" />

    <TextView
        android:id="@+id/prompt_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/personalise_height"
        app:layout_constraintLeft_toLeftOf="@+id/slider_height"
        app:layout_constraintTop_toTopOf="@+id/et_height" />

    <EditText
        android:id="@+id/et_height"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintLeft_toLeftOf="@+id/et_width"
        app:layout_constraintRight_toRightOf="@+id/et_width"
        app:layout_constraintTop_toBottomOf="@+id/et_width" />

    <SeekBar
        android:id="@+id/slider_height"
        style="@style/Widget.AppCompat.SeekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:max="2440"
        android:progress="1500"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/et_height"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/et_height"
        app:layout_constraintTop_toTopOf="@+id/et_height" />

    <TextView
        android:id="@+id/prompt_no_rows"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/personalise_no_rows"
        app:layout_constraintLeft_toLeftOf="@+id/slider_no_rows"
        app:layout_constraintTop_toTopOf="@+id/et_no_rows" />

    <EditText
        android:id="@+id/et_no_rows"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/et_height"
        app:layout_constraintRight_toRightOf="@+id/et_height"
        app:layout_constraintTop_toBottomOf="@+id/et_height" />

    <SeekBar
        android:id="@+id/slider_no_rows"
        style="@style/Widget.AppCompat.SeekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:max="10"
        android:progress="3"
        app:layout_constraintBottom_toBottomOf="@+id/et_no_rows"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/et_no_rows"
        app:layout_constraintTop_toTopOf="@+id/et_no_rows" />

    <TextView
        android:id="@+id/prompt_no_columns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/personalise_no_columns"
        app:layout_constraintLeft_toLeftOf="@+id/slider_no_columns"
        app:layout_constraintTop_toTopOf="@+id/et_no_columns" />

    <EditText
        android:id="@+id/et_no_columns"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="@+id/et_no_rows"
        app:layout_constraintRight_toRightOf="@+id/et_no_rows"
        app:layout_constraintTop_toBottomOf="@+id/et_no_rows" />

    <SeekBar
        android:id="@+id/slider_no_columns"
        style="@style/Widget.AppCompat.SeekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:max="10"
        android:progress="3"
        app:layout_constraintBottom_toBottomOf="@+id/et_no_columns"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/et_no_columns"
        app:layout_constraintTop_toTopOf="@+id/et_no_columns" />

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="£160"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</android.support.constraint.ConstraintLayout>
