<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:windowBackground"
    android:clickable="true"
    tools:context="com.thonners.plybl.PersonaliseActivityFragment2">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/bottom_margin_for_fab">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="156dp"
            android:scaleType="centerCrop"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bookcase_1"
            app:layout_constraintHorizontal_bias="1.0" />

        <TextView
            android:id="@+id/prompt_wood_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/personalise_wood_quality"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:layout_marginStart="8dp" />

        <com.thonners.plybl.RadioButtonView
            android:id="@+id/wood_finish_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/prompt_wood_finish"
            app:layout_constraintRight_toLeftOf="@+id/wood_finish_2"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp" />

        <com.thonners.plybl.RadioButtonView
            android:id="@+id/wood_finish_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@+id/wood_finish_1"
            app:layout_constraintRight_toLeftOf="@+id/wood_finish_3"
            app:layout_constraintTop_toTopOf="@+id/wood_finish_1"
            />

        <com.thonners.plybl.RadioButtonView
            android:id="@+id/wood_finish_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@+id/wood_finish_2"
            app:layout_constraintRight_toLeftOf="@+id/wood_finish_4"
            app:layout_constraintTop_toTopOf="@+id/wood_finish_1" />

        <com.thonners.plybl.RadioButtonView
            android:id="@+id/wood_finish_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/wood_finish_1"
            app:layout_constraintRight_toLeftOf="@+id/wood_finish_5"
            app:layout_constraintLeft_toRightOf="@+id/wood_finish_3"/>

        <com.thonners.plybl.RadioButtonView
            android:id="@+id/wood_finish_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@+id/wood_finish_4"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/wood_finish_1"/>


        <TextView
            android:id="@+id/prompt_colour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/personalise_colour"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wood_finish_1"
            android:layout_marginStart="8dp" />

        <com.thonners.plybl.RadioButtonView
            android:id="@+id/colour_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/prompt_colour"
            app:layout_constraintRight_toLeftOf="@+id/colour_2"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp" />

        <com.thonners.plybl.RadioButtonView
            android:id="@+id/colour_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@+id/colour_1"
            app:layout_constraintRight_toLeftOf="@+id/colour_3"
            app:layout_constraintTop_toTopOf="@+id/colour_1"
            />

        <com.thonners.plybl.RadioButtonView
            android:id="@+id/colour_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@+id/colour_2"
            app:layout_constraintRight_toLeftOf="@+id/colour_4"
            app:layout_constraintTop_toTopOf="@+id/colour_1" />

        <com.thonners.plybl.RadioButtonView
            android:id="@+id/colour_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/colour_1"
            app:layout_constraintRight_toLeftOf="@+id/colour_5"
            app:layout_constraintLeft_toRightOf="@+id/colour_3"/>

        <com.thonners.plybl.RadioButtonView
            android:id="@+id/colour_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@+id/colour_4"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/colour_1"/>


        <TextView
            android:id="@+id/prompt_joint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/personalise_joint"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/colour_1"
            android:layout_marginStart="8dp" />

        <com.thonners.plybl.RadioButtonView
            android:id="@+id/joint_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/prompt_joint"
            app:layout_constraintRight_toLeftOf="@+id/joint_2"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp" />

        <com.thonners.plybl.RadioButtonView
            android:id="@+id/joint_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@+id/joint_1"
            app:layout_constraintRight_toLeftOf="@+id/joint_3"
            app:layout_constraintTop_toTopOf="@+id/joint_1"
            />

        <com.thonners.plybl.RadioButtonView
            android:id="@+id/joint_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@+id/joint_2"
            app:layout_constraintRight_toLeftOf="@+id/joint_4"
            app:layout_constraintTop_toTopOf="@+id/joint_1" />

        <com.thonners.plybl.RadioButtonView
            android:id="@+id/joint_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/joint_1"
            app:layout_constraintRight_toLeftOf="@+id/joint_5"
            app:layout_constraintLeft_toRightOf="@+id/joint_3"/>

        <com.thonners.plybl.RadioButtonView
            android:id="@+id/joint_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@+id/joint_4"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/joint_1"/>


    </android.support.constraint.ConstraintLayout>
</ScrollView>